# HyperMosaic

./: CMakeLists.txt  README.md
ffmpeg-prebuilt/doc/: ffmpeg-all.html  ffmpeg-filters.html  ffplay-all.html  ffprobe-all.html
ffmpeg-prebuilt/include/libavutil/: ffversion.h
ffmpeg-prebuilt/lib/pkgconfig/: libavdevice.pc  libavfilter.pc
scripts/: build_ffmpeg_msvc.ps1
src/: main.cpp
src/concurrent/: mpsc_queue.h
src/ffmpeg/: ffmpeg_raii.cpp  ffmpeg_raii.h
src/pipeline/: decode_stage.cpp  decode_stage.h  demux_stage.cpp  demux_stage.h  encode_stage.cpp  encode_stage.h  track_render_stage.cpp  track_render_stage.h
src/tracker/: tracker_core.cpp  tracker_core.h
